docs/api/qiskit/0.35/qiskit.visualization.pulse_v2.IQXStandard.mdx
---
title: IQXStandard (v0.35)
description: API reference for qiskit.visualization.pulse_v2.IQXStandard in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.visualization.pulse_v2.IQXStandard
---

# IQXStandard

<Class id="qiskit.visualization.pulse_v2.IQXStandard" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/visualization/pulse_v2/stylesheet.py" signature="IQXStandard(**kwargs)" modifiers="class">
  Bases: `dict`

  Standard pulse stylesheet.

  *   Generate stepwise waveform envelope with latex pulse names.
  *   Apply phase modulation to waveforms.
  *   Plot frame change symbol with formatted operand values.
  *   Show chart name with scaling factor.
  *   Show snapshot and barrier.
  *   Do not show acquire channels.
  *   Channels are sorted by index and control channels are added to the end.

  ## Methods

  <span id="qiskit-visualization-pulse-v2-iqxstandard-clear" />

  ### clear

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.clear" signature="IQXStandard.clear() → None. Remove all items from D." />

  <span id="qiskit-visualization-pulse-v2-iqxstandard-copy" />

  ### copy

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.copy" signature="IQXStandard.copy() → a shallow copy of D" />

  <span id="qiskit-visualization-pulse-v2-iqxstandard-fromkeys" />

  ### fromkeys

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.fromkeys" signature="IQXStandard.fromkeys(value=None, /)">
    Create a new dictionary with keys from iterable and values set to value.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxstandard-get" />

  ### get

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.get" signature="IQXStandard.get(key, default=None, /)">
    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxstandard-items" />

  ### items

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.items" signature="IQXStandard.items() → a set-like object providing a view on D’s items" />

  <span id="qiskit-visualization-pulse-v2-iqxstandard-keys" />

  ### keys

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.keys" signature="IQXStandard.keys() → a set-like object providing a view on D’s keys" />

  <span id="qiskit-visualization-pulse-v2-iqxstandard-pop" />

  ### pop

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.pop" signature="IQXStandard.pop(k[, d]) → v, remove specified key and return the corresponding value.">
    If key is not found, d is returned if given, otherwise KeyError is raised
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxstandard-popitem" />

  ### popitem

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.popitem" signature="IQXStandard.popitem()">
    Remove and return a (key, value) pair as a 2-tuple.

    Pairs are returned in LIFO (last-in, first-out) order. Raises KeyError if the dict is empty.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxstandard-setdefault" />

  ### setdefault

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.setdefault" signature="IQXStandard.setdefault(key, default=None, /)">
    Insert key with a value of default if key is not in the dictionary.

    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxstandard-update" />

  ### update

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.update" signature="IQXStandard.update([E, ]**F) → None. Update D from dict/iterable E and F.">
    If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k]
  </Function>

  <span id="qiskit-visualization-pulse-v2-iqxstandard-values" />

  ### values

  <Function id="qiskit.visualization.pulse_v2.IQXStandard.values" signature="IQXStandard.values() → an object providing a view on D’s values" />
</Class>

